# python-training

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/asgi_wsgi/: main.py
src/async-http-request/: main.py  main_v2.py  results.jsonl  results_v2.jsonl  urls.txt
src/async-http-request/v2/: main.py  processing.py  queue_management.py  urls.txt
src/auto-created-at-metaclass/: main.py
src/lru_cache/: main.py
src/parallel-numerical-data-processing/: draw_plot.py  main.py
src/parallel-numerical-data-processing/results/: benchmark_results.csv
src/search-in-sorted-array/: main.py
src/singleton/: main.py  singleton_module.py  tests.py
