[project]
name = "python-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Pautov",email = "danpautoff@yandex.ru"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "aiofile (>=3.9.0,<4.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "ijson (>=3.4.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pre-commit = "^4.2.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
